Basic website structure done. Coming soon section complete except centering coming soon text properly.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="text/css" rel="stylesheet" href="asset/style.css" >
     <title>Document</title>
 </head>
 <body>
-    <header></header>
-    <nav></nav>
+    <nav class="navSection">navbar</nav>
 
-    
-    
+    <section class="title"><h1>My New Website</h1></section>
+
+    <section>
+        <div id="hero">
+            <div id="innerOne">
+                <div id="innerTwo">
+                    <div id="innerThree">
+                            <h3 id="heroText1">COMING SOON</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    </section>
+
+    <section class="contactMe">Contact Me</section>
+
+    <footer class="footer">footer</footer>
+
 </body>
 </html>
